[gd_scene load_steps=51 format=2]

[ext_resource path="res://src/02_scenes/02_Characters/02_Enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://src/01_assets/01_UI/health.png" type="Texture" id=2]
[ext_resource path="res://src/02_scenes/02_Characters/02_Enemies/01_AdditionalScripts/HurtBox.gd" type="Script" id=3]
[ext_resource path="res://src/02_scenes/02_Characters/02_Enemies/01_AdditionalScripts/HealthBars.gd" type="Script" id=4]
[ext_resource path="res://src/02_scenes/02_Characters/02_Enemies/01_AdditionalScripts/MovementManagement.gd" type="Script" id=5]
[ext_resource path="res://src/02_scenes/02_Characters/02_Enemies/01_AdditionalScripts/StatesManagement.gd" type="Script" id=6]
[ext_resource path="res://src/02_scenes/02_Characters/02_Enemies/01_AdditionalScripts/AttackManagement.gd" type="Script" id=7]
[ext_resource path="res://src/02_scenes/02_Characters/02_Enemies/LootGenerator.gd" type="Script" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="Animation" id=2]
resource_name = "attack"
length = 2.0
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.5, 0.55, 0.65, 0.67, 0.81 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19, 20, 21, 22, 23, 24 ]
}

[sub_resource type="Animation" id=41]
resource_name = "attack_2"

[sub_resource type="Animation" id=42]
resource_name = "attack_3"

[sub_resource type="Animation" id=3]
resource_name = "chase"
length = 0.7
loop = true
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.14, 0.21, 0.28, 0.35, 0.42, 0.49, 0.56, 0.63 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11, 12, 13, 14, 15, 16 ]
}

[sub_resource type="Animation" id=4]
length = 1.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.4, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("AdditionalScripts/LootManagement")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "generate_loot"
} ]
}

[sub_resource type="Animation" id=5]
length = 0.9
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 17 ]
}

[sub_resource type="Animation" id=6]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 25, 26, 27, 28, 29 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:is_taking_damage")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=7]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11, 12, 13, 14, 15, 16 ]
}

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "attack_2"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "attack_3"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "chase"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "death"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "receive_damage"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=16]
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachine" id=32]
states/attack/node = SubResource( 8 )
states/attack/position = Vector2( 278, 224 )
states/attack_2/node = SubResource( 9 )
states/attack_2/position = Vector2( 73, 159 )
states/attack_3/node = SubResource( 10 )
states/attack_3/position = Vector2( 686, 150 )
states/chase/node = SubResource( 11 )
states/chase/position = Vector2( 101, 56 )
states/death/node = SubResource( 12 )
states/death/position = Vector2( 822, 224 )
states/idle/node = SubResource( 13 )
states/idle/position = Vector2( 278, 56 )
states/receive_damage/node = SubResource( 14 )
states/receive_damage/position = Vector2( 548, 224 )
states/walk/node = SubResource( 15 )
states/walk/position = Vector2( 548, 56 )
transitions = [ "receive_damage", "death", SubResource( 16 ), "idle", "walk", SubResource( 17 ), "walk", "idle", SubResource( 18 ), "idle", "receive_damage", SubResource( 19 ), "idle", "chase", SubResource( 20 ), "chase", "idle", SubResource( 21 ), "attack", "idle", SubResource( 22 ), "idle", "attack", SubResource( 23 ), "attack", "receive_damage", SubResource( 24 ), "receive_damage", "chase", SubResource( 25 ), "idle", "attack_2", SubResource( 26 ), "attack_2", "idle", SubResource( 27 ), "idle", "attack_3", SubResource( 28 ), "attack_3", "idle", SubResource( 29 ), "attack_2", "receive_damage", SubResource( 30 ), "attack_3", "receive_damage", SubResource( 31 ) ]
start_node = "idle"
end_node = "death"
graph_offset = Vector2( -99, -91 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=33]

[sub_resource type="CapsuleShape2D" id=34]
radius = 7.0
height = 10.0

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 2 )
region = Rect2( 1, 23, 26, 6 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 2 )
region = Rect2( 1, 13, 26, 6 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 2 )
region = Rect2( 1, 19, 26, 6 )

[sub_resource type="CircleShape2D" id=38]
radius = 64.4981

[sub_resource type="CircleShape2D" id=39]
radius = 32.0

[sub_resource type="RectangleShape2D" id=40]
extents = Vector2( 15, 10 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 23
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 2 )
anims/attack_2 = SubResource( 41 )
anims/attack_3 = SubResource( 42 )
anims/chase = SubResource( 3 )
anims/death = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/receive_damage = SubResource( 6 )
anims/walk = SubResource( 7 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 32 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 33 )

[node name="HurtBox" type="Area2D" parent="."]
visible = false
priority = 1.0
collision_layer = 4
collision_mask = 16
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 34 )
disabled = true

[node name="Timers" type="Node2D" parent="."]

[node name="MovementChangeTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="HealthBars" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="HealthUnder" type="TextureProgress" parent="HealthBars"]
margin_left = -13.0
margin_top = -21.0
margin_right = 13.0
margin_bottom = -15.0
texture_progress = SubResource( 35 )
tint_progress = Color( 0.937255, 0.662745, 0.0156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthUpper" type="TextureProgress" parent="HealthBars"]
margin_left = -13.0
margin_top = -21.0
margin_right = 13.0
margin_bottom = -15.0
value = 60.0
texture_under = SubResource( 36 )
texture_progress = SubResource( 37 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="AdditionalScripts" type="Node2D" parent="."]

[node name="MovementManagement" type="Node2D" parent="AdditionalScripts"]
script = ExtResource( 5 )

[node name="StatesManagement" type="Node2D" parent="AdditionalScripts"]
script = ExtResource( 6 )

[node name="AttackManagement" type="Node2D" parent="AdditionalScripts"]
script = ExtResource( 7 )

[node name="LootManagement" type="Node2D" parent="AdditionalScripts"]
script = ExtResource( 8 )

[node name="DetectionRange" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
shape = SubResource( 38 )

[node name="AttackRange" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource( 39 )

[node name="HitBox" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 15, 0 )
shape = SubResource( 40 )
[connection signal="timeout" from="Timers/MovementChangeTimer" to="AdditionalScripts/MovementManagement" method="_on_MovementChangeTimer_timeout"]
[connection signal="body_entered" from="DetectionRange" to="." method="_on_DetectionRange_body_entered"]
[connection signal="body_exited" from="DetectionRange" to="." method="_on_DetectionRange_body_exited"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_AttackRange_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_AttackRange_body_exited"]
[connection signal="area_entered" from="HitBox" to="AdditionalScripts/AttackManagement" method="_on_HitBox_area_entered"]
